# dj-mytodo

./: .env.example  .gitignore  README.md  build.sh  manage.py  pyproject.toml  render.yaml
.github/workflows/: django.yml
basesite/: apps.py  forms.py  urls.py  views.py
basesite/templates/: index.html
mytodo/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
mytodo/migrations/: 0001_initial.py  0002_alter_task_assigned_to.py  0003_task_user.py
mytodo/static/mytodo/scripts/: shortcuts.js
mytodo/templates/: base.html  task_confirm_delete.html  task_detail.html  task_form.html  task_list.html
mytodosite/: asgi.py  settings.py  urls.py  views.py  wsgi.py
mytodosite/templates/: home.html
templates/registration/: login.html  logout.html  password_change.html  password_reset_done.html  password_reset_form.html  profile.html  register.html
