[project]
name = "dj-mytodo"
version = "0.1.0"
description = "A Django ToDo App"
requires-python = ">=3.14"
dependencies = [
    "dj-database-url>=3.0.1",
    "django==6.0",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.3.4",
    "sentry-sdk[django]>=2.34.1",
    "uvicorn>=0.35.0",
    "whitenoise[brotli]>=6.9.0",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.1",
]
